# mcp-telepizza

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  publish.yml
docs/: TELEPIZZA_INTERNALS.md
docs/demo/: claude-demo.sh  demo.tape
src/telepizza_mcp/: __init__.py  client.py  server.py
tests/: test_parsers.py
tests/fixtures/: getstore_rendered.html  loyalty_activity.html  loyalty_rewards.html  menu_tiles.html  minicart_empty.html  minicart_filled.html  offer_tiles.html  order_history_cards.html  quickview.html
