[project]
name = "telepizza-mcp"
version = "0.1.0"
description = "MCP server (read-only) for telepizza.es: menu, offers, stores, account and order history"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
]

[project.scripts]
telepizza-mcp = "telepizza_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telepizza_mcp"]
