[project]
name = "mcp-telepizza"
version = "0.2.0"
description = "Servidor MCP no oficial de solo lectura para telepizza.es: carta, ofertas, tiendas, puntos MiTelepi e historial de pedidos"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
]

[project.scripts]
telepizza-mcp = "telepizza_mcp.server:main"

[project.urls]
Repository = "https://github.com/aramosf/mcp-telepizza"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telepizza_mcp"]
