[project]
name = "mcp-telepizza"
version = "0.5.0"
description = "Servidor MCP no oficial para telepizza.es: carta, ofertas, tiendas, puntos MiTelepi, carrito e historial de pedidos (sin checkout)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mcp", "telepizza", "model-context-protocol", "claude"]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
]

[project.scripts]
telepizza-mcp = "telepizza_mcp.server:main"

[project.optional-dependencies]
allergens = ["pdfplumber>=0.11"]

[project.urls]
Repository = "https://github.com/aramosf/mcp-telepizza"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telepizza_mcp"]
